# telegram-bot-template-

./: README.md  alembic.ini  pyproject.toml  requirements.txt
bot/: __init__.py  config.py  main.py
bot/database/: __init__.py  models.py  repository.py
bot/database/migrations/: env.py
bot/handlers/: __init__.py  callbacks.py  commands.py  messages.py
bot/keyboards/: __init__.py  inline.py
bot/middlewares/: __init__.py  logging.py  throttling.py
bot/services/: __init__.py
bot/utils/: logger.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py
tests/handlers/: test_commands.py
tests/unit/: test_repository.py
